# contact-to-contact-trajectory

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/FootTrajectoryGeneration/: ContactToContactTypes.hh  FootTrajectoryGenerationAbstract.cpp  FootTrajectoryGenerationAbstract.hh  FootTrajectoryGenerationMultiple.cpp  FootTrajectoryGenerationMultiple.hh  FootTrajectoryGenerationStandard.cpp  FootTrajectoryGenerationStandard.hh  LeftAndRightFootTrajectoryGenerationMultiple.cpp  LeftAndRightFootTrajectoryGenerationMultiple.hh  OnLineFootTrajectoryGeneration.cpp  OnLineFootTrajectoryGeneration.h
